[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/healthbar_border.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Boss.gd" type="Script" id=2]
[ext_resource path="res://Sprites/MergeResultEnemyWoah.png" type="Texture" id=3]
[ext_resource path="res://Sprites/healthbar_empty.png" type="Texture" id=4]
[ext_resource path="res://Sprites/healthbar_full.png" type="Texture" id=5]

[sub_resource type="Animation" id=13]
resource_name = "Attack"
length = 0.85
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2.79397e-07, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52, 0.56, 0.6, 0.64, 0.68, 0.72, 0.76 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 23 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Run"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2.79397e-07, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25, 26, 27, 28, 29, 30, 31, 32 ]
}

[sub_resource type="CircleShape2D" id=9]

[sub_resource type="CircleShape2D" id=10]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 110, 105 )

[sub_resource type="CircleShape2D" id=14]
radius = 290.004

[node name="boss" type="KinematicBody2D" groups=["Boss"]]
scale = Vector2( 2, 2 )
collision_layer = 11
collision_mask = 11
script = ExtResource( 2 )
path_to_player = NodePath("../../../Player")

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 20, -132 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
vframes = 35
frame = 23

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/Attack = SubResource( 13 )
anims/RESET = SubResource( 11 )
anims/Run = SubResource( 12 )

[node name="Collision" type="CollisionShape2D" parent="."]
scale = Vector2( 6.5, 6.5 )
shape = SubResource( 9 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="blood" type="Area2D" parent="."]
visible = false

[node name="blood" type="CollisionShape2D" parent="blood"]
scale = Vector2( 6, 6 )
shape = SubResource( 10 )

[node name="Give dmg" type="Area2D" parent="."]
collision_layer = 10
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Give dmg"]
position = Vector2( 0, -1 )
shape = SubResource( 6 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -35.0
margin_top = -83.0
margin_right = 5.0
margin_bottom = -43.0
rect_scale = Vector2( 2.4, 0.9 )
max_value = 25.0
value = 25.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 5 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 263, 345 )
scale = Vector2( 12.9, 11.45 )
rect = Rect2( -30, -40, 20, 20 )

[node name="Shoot" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shoot"]
position = Vector2( 0, -1 )
shape = SubResource( 14 )

[connection signal="body_entered" from="blood" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Give dmg" to="." method="_on_Give_dmg_body_entered"]
[connection signal="body_exited" from="Give dmg" to="." method="_on_Give_dmg_body_exited"]
[connection signal="body_entered" from="Shoot" to="." method="_on_Shoot_body_entered"]
[connection signal="body_exited" from="Shoot" to="." method="_on_Shoot_body_exited"]
